# steering-behaviour-rust-webgl

./: Cargo.toml  README.md  bundle.js  flake.nix  index.html  notes.md  shell.nix  todo.md
src/: canvas.rs  draw.rs  kinematic.rs  lib.rs  program_arrow.rs  program_stage.rs  raf.rs  state.rs  vector.rs
src/domain/: character.rs  initial_state.rs  kinematic.rs  mod.rs  steering.rs
src/steering/: align.rs  arrive.rs  collision_avoidance.rs  evade.rs  face.rs  flee.rs  follow_path_chase_rabbit.rs  follow_path_predict.rs  helpers.rs  look_where_you_are_going.rs  match_velocity.rs  mod.rs  obstacle_avoidance.rs  pursue.rs  seek.rs  separation.rs  wander.rs
static/: index.html  style.css
