[package]
name = "steering"
version = "0.1.0"
authors = ["craigdallimore <decoy9697@gmail.com>"]
description = "steering behaviours"
repository = "git@github.com:craigdallimore/steering-behaviour-rust-webgl.git"
edition = "2021"
license = "MIT"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
game-loop = "0.10.1"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.59"
nalgebra = "0.32.2"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }                              # A generic serialization/deserialization framework
serde_json = "1.0.91"                          # A JSON serialization file format
wasm-bindgen = "0.2"
float-cmp = "0.9.0"

[dependencies.web-sys]
version = "0.3.59"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'WebGl2RenderingContext',
  'WebGlUniformLocation',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlShader',
  'WebGlVertexArrayObject',
  'Window',
  'console',
]
